@@ -3,6 +3,25 @@ TO DO
 Note that this is not a complete to do list. It mostly only lists bugs
 and quirks that I need to fix eventually.
 
+- open in new split
+- great usability enhancement: have a new dialog type
+  OPEN_DIALOG
+  SAVE_DIALOG
+  BROWSER
+  BROWSER_DIALOG -- open button and commands in right click menu apply
+  that action to the selected files and close the dialog box.
+  - depends on: right-click working for multiple selections
+  - browser multiple selections
+  - get rid of 'open with encoding' menu
+  - fsb: rename in place
+  - NO -- FSB: Commands -> Encoding -> [ ] Default
+				       ---
+				       [ ] ...
+				       [ ] ...
+				       [ ] ...
+				       [ ] ...
+				       -- system encoding part of list
+- fix paste previous bug
 - eliminate redundant scans and events when loading buffer
 - try typing foo), put cursor after foo, type some more -- slowdown
 - make vfs listing faster
